crates/data-dict/tests/snapshots/validate_meta__unreadable_source_reported.snap
---
source: crates/data-dict/tests/validate_meta.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: animals
    source:
      parquet: missing.parquet
    columns:
      - name: name
        type: string
        examples: [otter, seal]
────────────────────────────────────────
Error: [M05] A table's `source` must point at a readable Parquet file.
   ╭─[ dict.yaml:6:16 ]
   │
 4 │   - name: animals
   │ 
 6 │       parquet: missing.parquet
   │                ───────┬───────  
   │                       ╰───────── Parquet error: Cannot open file: No such file or directory (os error 2)
   ┆ 
───╯
